tests/fail/parser-class1.dit
A {
    String value;
    extends B;
}